# ot-harjoitustyo

./: README.md
budget-management-app/: .coveragerc  .gitignore  pyproject.toml  tasks.py
budget-management-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tekoaly.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
budget-management-app/src/: build.py  index.py
budget-management-app/src/db/: initialize_database.py
budget-management-app/src/entities/: expense.py  user.py
budget-management-app/src/repositories/: expense_repository.py  user_repository.py
budget-management-app/src/services/: budget_service.py  expense_service.py  user_service.py
budget-management-app/src/tests/repositories/: expense_repository_test.py  user_repository_test.py
budget-management-app/src/tests/services/: expense_service_test.py  user_service_test.py
budget-management-app/src/ui/: add_expense_view.py  create_user_view.py  expenses_view.py  login_view.py  show_expenses_view.py  ui.py  update_expense_view.py
dokumentaatio/: tyoaikakirjanpito.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md  sekvenssikaavio.md
