[tool.poetry]
name = "budget-management-app"
version = "0.1.0"
description = ""
authors = ["BorisBanchev <boris.banchev03@gmail.com>"]
readme = "../README.md" # Update correct path to point at the README.md of the app

[tool.poetry.dependencies]
python = "^3.10"
invoke = ">=2.2.0,<3.0.0"
bcrypt = ">=4.3.0,<5.0.0"
dotenv = ">=0.9.9,<0.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.7.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
